--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
     "EstroDataConnection": "Server=COREi5; Database=EstroShop;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;",
     "EstroDataConnectionSomee": "workstation id=estro_db.mssql.somee.com;packet size=4096;user id=danielmartina_SQLLogin_1;pwd=5baaod69bu;data source=estro_db.mssql.somee.com;persist security info=False;initial catalog=estro_db;TrustServerCertificate=True",
-    "EstroDataConnectionPostgres": "Server=localhost;Database=EstroDB;User Id=postgres;Password=267072;"
+    "EstroDataConnectionPostgres": "Server=localhost;Database=EstroDB;User Id=postgres;Password=Temeirro2006;"
   },
   "Jwt": {
     "Key": "Generate_super_key_long_by_256_bit",
