--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -4,5 +4,26 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"EstroDataConnection": "Server=COREi5; Database=EstroShop;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;",
+    "EstroDataConnectionPostgres": "Server=localhost;Database=EstroDB;User Id=postgres;Password=267072;",
+    //"EstroDataConnectionPostgres": "Server=4.232.129.247;Database=EstroDB;Port=5022;User Id=krot;Password=p%rSDj4Iytmds07djc**dmUntdOidd3dZ_WTi4B9Zo;"
+  },
+  "Jwt": {
+    "Key": "Generate_super_key_long_by_256_bit",
+    "Issuer": "BestTeam",
+    "LifeTime": "60"
+  },
+  "EmailSettings": {
+    "User": "estroshopua@ukr.net",
+    "Password": "DchbsZ5JA2YBn9LP",
+    "SMTP": "smtp.ukr.net",
+    "PORT": 465
+  },
+  "HostSettings": {
+    "URL": "http://localhost:5173"
   }
 }
+
