--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -4,6 +4,26 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EstroDataConnection": "Server=COREi5; Database=EstroShop;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;",
+    "EstroDataConnectionSomee": "workstation id=estro_db.mssql.somee.com;packet size=4096;user id=danielmartina_SQLLogin_1;pwd=5baaod69bu;data source=estro_db.mssql.somee.com;persist security info=False;initial catalog=estro_db;TrustServerCertificate=True",
+    "EstroDataConnectionPostgres": "Server=4.232.129.247;Database=EstroDB;Port=5022;User Id=krot;Password=p%rSDj4Iytmds07djc**dmUntdOidd3dZ_WTi4B9Zo;"
+  },
+  "Jwt": {
+    "Key": "Generate_super_key_long_by_256_bit",
+    "Issuer": "BestTeam",
+    "LifeTime": "60"
+  },
+  "EmailSettings": {
+    "User": "estroshopua@ukr.net",
+    "Password": "DchbsZ5JA2YBn9LP",
+    "SMTP": "smtp.ukr.net",
+    "PORT": 465
+  },
+  "HostSettings": {
+    "URL": "http://localhost:5173"
   }
 }
 
