--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"EstroDataConnection": "Server=COREi5; Database=EstroShop;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;",
-    "EstroDataConnectionPostgres": "Server=localhost;Database=EstroDB;User Id=postgres;Password=267072;",
-    //"EstroDataConnectionPostgres": "Server=4.232.129.247;Database=EstroDB;Port=5022;User Id=krot;Password=p%rSDj4Iytmds07djc**dmUntdOidd3dZ_WTi4B9Zo;"
+    //"EstroDataConnectionPostgres": "Server=localhost;Database=EstroDB;User Id=postgres;Password=267072;",
+    "EstroDataConnectionPostgres": "Server=4.232.129.247;Database=EstroDB;Port=5022;User Id=krot;Password=p%rSDj4Iytmds07djc**dmUntdOidd3dZ_WTi4B9Zo;"
   },
   "Jwt": {
     "Key": "Generate_super_key_long_by_256_bit",
