--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -24,6 +24,11 @@
   },
   "HostSettings": {
     "URL": "http://localhost:5173"
+  },
+  "Twilio": {
+    "AccountSID": "AC816f3b680a38c579c5d27c5d0b745b04",
+    "AuthToken": "b4b4285d409b6cb7b79fb9c7d68e82cf",
+    "VerificationServiceSID": "VA5b0b4bd87f33099252c85f6fc7e6674a"
   }
 }
 
