--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
+    <PackageReference Include="Twilio" Version="7.1.0" />
   </ItemGroup>
 
   <ItemGroup>
