--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"EstroDataConnection": "Server=COREi5; Database=EstroShop;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;",
-    //"EstroDataConnectionPostgres": "Server=localhost;Database=EstroDB;User Id=postgres;Password=267072;",
+    "EstroDataConnection": "Server=COREi5; Database=EstroShop;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;",
+    "EstroDataConnectionSomee": "workstation id=estro_db.mssql.somee.com;packet size=4096;user id=danielmartina_SQLLogin_1;pwd=5baaod69bu;data source=estro_db.mssql.somee.com;persist security info=False;initial catalog=estro_db;TrustServerCertificate=True",
     "EstroDataConnectionPostgres": "Server=4.232.129.247;Database=EstroDB;Port=5022;User Id=krot;Password=p%rSDj4Iytmds07djc**dmUntdOidd3dZ_WTi4B9Zo;"
   },
   "Jwt": {
@@ -24,6 +24,11 @@
   },
   "HostSettings": {
     "URL": "http://localhost:5173"
+  },
+  "Twilio": {
+    "AccountSID": "AC816f3b680a38c579c5d27c5d0b745b04",
+    "AuthToken": "b4b4285d409b6cb7b79fb9c7d68e82cf",
+    "VerificationServiceSID": "VA5b0b4bd87f33099252c85f6fc7e6674a"
   }
 }
 
