--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -9,9 +9,9 @@
   "ConnectionStrings": {
     "EstroDataConnection": "Server=COREi5; Database=EstroShop;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;",
     "EstroDataConnectionSomee": "workstation id=estro_db.mssql.somee.com;packet size=4096;user id=danielmartina_SQLLogin_1;pwd=5baaod69bu;data source=estro_db.mssql.somee.com;persist security info=False;initial catalog=estro_db;TrustServerCertificate=True",
-    "EstroDataConnectionPostgres": "Server=4.232.129.247;Database=EstroDB;Port=5022;User Id=krot;Password=p%rSDj4Iytmds07djc**dmUntdOidd3dZ_WTi4B9Zo;"
+    //"EstroDataConnectionPostgres": "Server=4.232.129.247;Database=EstroDB;Port=5022;User Id=krot;Password=p%rSDj4Iytmds07djc**dmUntdOidd3dZ_WTi4B9Zo;"
     //"EstroDataConnectionPostgres": "Server=localhost;Database=EstroDB;Port=5432;User Id=postgres;Password=Temeirro2006"
-    //"EstroDataConnectionPostgres": "Server=localhost;Database=EstroDB;User Id=postgres;Password=267072;"
+    "EstroDataConnectionPostgres": "Server=localhost;Database=EstroDB;User Id=postgres;Password=267072;"
 
   },
   "Jwt": {
