Hosting app is good backend

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,12 +7,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"EstroDataConnectionSomee": "workstation id=estro_db.mssql.somee.com;packet size=4096;user id=danielmartina_SQLLogin_1;pwd=5baaod69bu;data source=estro_db.mssql.somee.com;persist security info=False;initial catalog=estro_db;TrustServerCertificate=True",
+    "EstroDataConnection": "Server=COREi5; Database=EstroShop;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;",
+    "EstroDataConnectionSomee": "workstation id=estro_db.mssql.somee.com;packet size=4096;user id=danielmartina_SQLLogin_1;pwd=5baaod69bu;data source=estro_db.mssql.somee.com;persist security info=False;initial catalog=estro_db;TrustServerCertificate=True",
     "EstroDataConnectionPostgres": "Server=18.199.225.112;Database=EstroDB;Port=5022;User Id=krot;Password=p%riSDj4Imlds07djc**dmUntdOik9dd3dZ_#WTi4B9Zo;"
+    //"EstroDataConnectionPostgres": "Server=localhost;Database=EstroDB;Port=5432;User Id=postgres;Password=123456"
+    //"EstroDataConnectionPostgres": "Server=localhost;Database=EstroDB;User Id=postgres;Password=267072;"
   },
   "Jwt": {
     "Key": "Generate_super_key_long_by_256_bit",
     "Issuer": "BestTeam",
+    "Audience": "BestTeam",
     "LifeTime": "60"
   },
   "EmailSettings": {
@@ -25,9 +29,8 @@
     "URL": "http://localhost:5173"
   },
   "Twilio": {
-    "AccountSID": "AC816f3b680a38c579c5d27c5d0b745b04",
-    "AuthToken": "b4b4285d409b6cb7b79fb9c7d68e82cf",
-    "VerificationServiceSID": "VA5b0b4bd87f33099252c85f6fc7e6674a"
+    "AccountSID": "AC902312a7d17b4fc600fa789e690824fb",
+    "AuthToken": "d1fa30330035ebcd6bc81b49cb17ea67",
+    "VerificationServiceSID": "VA8ff701eb02d896dc76e0ddbf217896f8"
   }
 }
-
